--- a/slides/weekthirteen/index.qmd
+++ b/slides/weekthirteen/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Handling Security Vulnerabilities"
 subtitle: "Exploring Ways to Manage Security Vulnerabilities"
-description: "How do we handle a security vulnerability?"
+description: "What are best practices for handling vulnerabilities?"
 date: "2024-11-18"
 date-format: long
 author: Gregory M. Kapfhammer
